# growmate-backend

./: .env.example  .gitignore  Dockerfile  IMPORT_DATA.md  LICENSE  Q_LEARNING.md  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: .env.example  Dockerfile  RUFF.md  main.py  pyproject.toml  requirements.txt
backend/agents/: base.py  orchestrator.py  reasoning_loop.py  reflection_engine.py
backend/agents/academic_agent/: bayesian_tracker.py  htn_executor.py  htn_node.py  htn_planner.py  htn_utils.py
backend/agents/empathy_agent/: __init__.py  likelihood.py  particle_filter.py
backend/agents/strategy_agent/: __init__.py  q_learning.py  q_learning_agent.py  reward_engine.py
backend/api/routes/: chatbot.py  config.py  formulas.py  inspection.py  leaderboard.py  lives.py  onboarding.py  orchestrator.py  orchestrator_runtime.py  quiz.py  quota.py  (+3 more)
backend/configs/: agents.yaml  htn_rules.yaml  orchestrator.yaml  strategy.yaml
backend/core/: config.py  data_packages.py  formula_handbook_service.py  formula_recommender.py  knowledge_retriever.py  learning_mode.py  lives_engine.py  llm_service.py  memory_store.py  onboarding_service.py  payload_formatter.py  question_selector.py  quiz_service.py  runtime_alerts.py  runtime_metrics.py  security.py  state_manager.py  supabase_client.py  tool_handlers.py  tool_registry.py  user_classifier.py  xp_engine.py
backend/data/: derivative_priors.json  formula_handbook.json  formula_lookup.json  onboarding_questions.json  quiz_question_template.csv  quiz_question_template_normalized.ndjson  transform_quiz_data_csv.py
backend/models/: requests.py  responses.py
backend/orchestrator/: __init__.py  aggregator.py  engine.py  monitoring.py  policy.py  schemas.py
backend/scripts/: backfill_quiz_session_summaries.py  curate_p0_dataset.py  embed_knowledge.py  import_quiz_questions.py  normalize_quiz_questions.py  validate_data_packages.ps1
backend/tests/: conftest.py  test_bayesian_core.py  test_data_packages_service.py  test_diagnostic_scenarios.py  test_phase4_error_chain.py  test_phase4_multiplayer_selector.py  test_phase5_analytics_empathy.py  test_startup_data_packages.py
(+115 files in other folders)
